mule-agent/v/1.3.0/installing-mule-agent.adoc
= Installing the Mule Agent
:keywords: agent, mule, esb, servers, monitor, notifications, external systems, third party, get status, metrics

_Enterprise Edition_

link:/release-notes/mule-agent-1.3.0-release-notes[Mule Agent 1.3.0 Release Notes]

Mule agent version 1.3.0 installs as a plugin from a zip file, available in the latest version page or in the corresponding link:/release-notes/mule-agent-release-notes[release notes page].

[IMPORTANT]
====
Mule 3.7.x and API Gateway 2.x provide an link:/mule-agent/v/1.1.1/index[older version of the Mule Agent]. This version doesn't provide support for link:/runtime-manager/sending-data-from-arm-to-external-monitoring-software[Sending Data from Runtime Manager to External Monitoring Software]. Version 1.3.0 of the Agent must be downloaded separately.
====

== Prerequisites

The Mule agent continues to be available with the Mule and API Gateway software distributions; however, you should use the new zip version to update your Mule agent to the latest version.

This document assumes that your enterprise license is current. See link:/mule-user-guide/v/3.7/installing-an-enterprise-license[Installing an Enterprise License] for information on obtaining and installing an enterprise license.

The Mule agent works with Mule 3.6.0 and newer, and API Gateway 2.1 and newer.

[TIP]
We recommend that you run the latest version of Mule Enterprise. You can download the latest version from the link:http://www.mulesoft.com/support-login[customer portal].

== Download the Latest Version of the Agent

Download the link:http://mule-agent.s3.amazonaws.com/1.3.0/mule-agent-1.3.0.zip[Mule Agent zip file].

== Installing the Agent from the Zip File

. Unzip the `mule-agent-[VERSION].zip` file to the `$MULE_HOME/bin` Mule software distribution folder.
+
[TIP]
====
The agent zip file contains these 3 files.

* `amc_setup` - Mac and Linux installation file
* `amc_setup.bat` - Windows installation file
* `agent-setup-<version>.jar` - Called by the installation files
====
+
. Depending on your OS, run `amc_setup` or `amc_setup.bat` on the command line to install the Mule agent plugin.

The installed Mule agent works correctly with Mule and API Gateway runtimes versions that already include the Mule agent in the distribution.

== Installation Options

Run `./amc_setup --help` to see installation options.



== Running the Updater

After downloading the Mule agent zip file, determine if you can simply update an existing Mule agent installation.

Compatible Mule and API Gateway runtimes ship with an older version of the `amc_setup` script. If you already ran an older version of this script which installed an earlier version of the Mule agent (in which case there should be a `mule_agent.yml` configuration file in the `$MULE_HOME/conf folder`), then follow these steps to keep your existing Mule agent configuration and modifications:

. Stop Mule or the API Gateway runtime. You can stop Mule with the `./bin stop` command or by killing the process.
. Unzip the `mule-agent-[VERSION].zip` to the `$MULE_HOME/bin` folder.
. Run `./amc_setup -U` to update the agent version. If you are using Windows, run: `amc_setup.bat -U`.
. Restart Mule with the `$MULE_HOME/bin/./mule restart` command.

[NOTE]
For information on starting and stopping API Gateway, see link:/api-manager/configuring-an-api-gateway[Configuring an API Gateway].

=== Agent Update Process

The amc_setup script makes the following changes to your Mule runtime installation:

. Backs up the current version of the agent:
** Everything under `$MULE_HOME/plugins/MULE_AGENT_PLUGIN_FOLDER` is archived into  `$MULE_HOME/tools/mule-agent-backup.zip`.
** Any custom modules you have installed (usually located in `$MULE_HOME/plugins/MULE_AGENT_PLUGIN_FOLDER/lib/modules`) are archived into  `$MULE_HOME/tools/mule-agent-modules-backup.zip`.
. Updates agent libs under `$MULE_HOME/plugins/MULE_AGENT_PLUGIN_FOLDER/lib`
. Keeps the current `$MULE_HOME/conf/mule-agent.yml` configuration file.
. Keeps modules under `$MULE_HOME/plugins/MULE_AGENT_PLUGIN_FOLDER/lib/modules` unchanged (all custom modules added to the agent that are not included in the agent distribution should be installed in this folder).
. No reregistration is needed after the process is done, just restart the Mule or API Gateway instance.

== Installing from a Software Distribution

[IMPORTANT]
====
Currently, Mule 3.7.x and API Gateway 2.x provide an link:/mule-agent/v/1.1.1/index[older version of the Mule Agent]. This version doesn't provide support for link:/runtime-manager/sending-data-from-arm-to-external-monitoring-software[Sending Data from Runtime Manager to External Monitoring Software]. Version 1.3.0 of the Agent must be downloaded separately.
====

The following sections explain how to install from either the link:https://www.mulesoft.com/platform/mule[Mule Runtime] or API Gateway on premise installations. 

The agent comes bundled with your Mule installation. You can install it by running `$MULE_HOME/bin/amc_setup` (or `$MULE_HOME\bin\amc_setup.bat` if on Windows).

*Mule 3.6.0 and 3.6.1 Installation:*

Download the agent and follow the steps in the previous <<Installing the Agent from the Zip File,Installing the Agent from the Zip File>> section. Then run `amc_setup` or `amc_setup.bat` depending on your OS.

== Installation Options

[width="100%",cols="20a,80a",options="header"]
|===
|Parameter|Description

|`-H`
|Configures the Mule agent to create a hybrid management connection with a Runtime Manager. This option requires a token (provided by the Runtime Manager Console) and a name for the Mule server as you want it to appear in the Runtime Manager. For example:

[source,Console]
----
-H <token> myserver
----

To obtain the token, you need to use the *Add Server* option in the Runtime Manager. Once you have the token, copy-paste it as the `-H` parameter for your agent installation command.


[WARNING]
It is not supported to register a Mule runtime with both an older link:/mule-management-console/[Mule Management Console (MMC)] and a link:/runtime-manager/cloudhub-and-mule[CloudHub and Mule]. If the Mule runtime is currently managed in MMC, you should first unregister the Mule runtime with MMC before running the `amc_setup -H` script.

For details, see link:/runtime-manager/managing-servers#add-a-server[Managing Servers].


|`-I`
|Configures the Mule agent to use an unencrypted connection. It is valid for the REST transport only. You can interact with the API using a browser or other tool for making HTTP requests.

|`-S`
|Configures the Mule agent to establish a TLS connection with an on-premises administration console. You need to provide the truststore and keystore in JKS format. This option enables a TLS channel for REST communications only. See <<Secure Connection Channel>>.

|`-P`
`--proxy`
|When configuring Mule agent to connector the Runtime Manager via a proxy, this option defines proxy details. See <<Installation Via Proxy>>.

|`--mule-home`
|Your `$MULE_HOME` directory. Use this option if you are not running the installation script from `$MULE_HOME/bin`.

|`-U`
|Update the Mule agent software.

|===


=== Secure Connection Channel

[source, code]
----
Anypoint Mule Agent Installer ----------- Mode [Secure connection Channel(S) / Insecure Connection Channel(I) / Quit(Q)] (?):
----

This option configures the Mule agent to establish a TLS connection (HTTPS) with a client of the Agent's API or an on-premise administration console. You need to provide the truststore and keystore in JKS format. This option enables a TLS channel for REST communications only. Once you select the Secure connection Channel mode, you see the following menu:

[source,yaml, linenums]
----
The communication channel for the agent will be encrypted using
public/private key certificates. In the following steps you
will be asked to provide the keystore and truststore.
Both keystore and truststore format must be JKS.

Keystore location (?):
Truststore location (?):
Keystore Password (?):
Keystore Alias (?):
Keystore Alias Password (?):
INFO: Mule agent was successfully configured to use a TLS channel for REST communications.
----
_Keystore location_

The location of the keystore file to encrypt the communication channel. The keystore must be in JKS format. It is mandatory to provide one.

_Truststore location_

The location where of the truststore file to accept incoming requests from the administration console. The truststore must be in JKS format and must not have a password.

_Keystore Password_

The password to read the keystore. The password is used by the agent to open the keystore.

_Keystore Alias_

The alias of the key stored in the keystore.

_Keystore Alias Password_

The alias password in the keystore.

Please note that this procedure will copy the provided Keystore and Truststore files to `$MULE_HOME/conf/`. Yhe Truststore file will be under the name of `truststore.jks`, while the Keystore file will be copied as is, as it is being referenced by the configuration file located at `$MULE_HOME/conf/mule-agent.yml`. These files should not be removed and the installation script will require the proper permissions to be able to write in the mentioned directory.

=== Insecure Connection Channel

This option configures the Mule agent to use an unencrypted connection. It is valid for the REST transport only. You can interact with the API using a browser or other tool for making HTTP requests.


=== Hybrid Management

Configures the Mule agent to connect to the Runtime Manager. This option requires a token (provided by the Runtime Manager console) and an instance name. For details, see link:/runtime-manager/managing-servers#add-a-server[Managing Servers].

=== Installation Via Proxy

If you are configuring the Mule agent to connect to the Runtime Manager via a proxy, use this option to define proxy details. User and password are optional and may be omitted if the proxy doesn't require authentication.

Where:

* _Proxy Host_ - The host of the desired proxy.
* _Proxy Port_ - The port of the desired proxy.
* _Proxy User_ - The user with which to authenticate against the proxy.
* _Proxy Password_ - The password with which to authenticate against the proxy.

If you have already installed the Mule agent and want to change its configuration to use a proxy, you can do so by editing the `wrapper.conf` file. For details, see link:/mule-agent/v/1.3.0/configuring-a-proxy-for-the-mule-agent[Configuring a Proxy for the Mule Agent].


== Configuring the Agent

The sections that follow provide additional configuration details for Mule agent.

[NOTE]
If you wish to use the Agent to send data from the Runtime Manager to Splunk, an ELK stack or other external software, then you must configure it in a different way from the one described below. See link:/runtime-manager/sending-data-from-arm-to-external-monitoring-software[Sending Data from the Runtime Manager to External Monitoring Software] for details.


=== Configuring mule-agent.yml

At startup, the Mule agent reads its configuration from the file `$MULE_HOME/conf/mule-agent.yml`. You must manually add, then edit this file with your installation's configuration parameters.

[source,yaml, linenums]
----
muleInstanceUniqueId: validId
organizationId: organizationId

transports:
    rest.agent.transport:
        security:
            keyStorePassword: mykeystorePassword
            keyStoreAlias: agent
            keyStoreAliasPassword: agentpassword
        port: 9997

services:
    mule.agent.application.service:
        enabled: true

    mule.agent.domain.service:
        enabled: true

    mule.agent.jmx.publisher.service:
        enabled: true
        frequency: 15
        frequencyTimeUnit: MINUTES
        beans:
            -   beanQueryPattern: java.lang:type=Runtime
                attribute: Uptime
                monitorMessage: Monitoring memory up-time
            -   beanQueryPattern: java.lang:type=MemoryPool,*
                attribute: Usage.used
                monitorMessage" : Used Memory

internalHandlers:
    domaindeploymentnotification.internal.message.handler:
        enabled: false

    applicationdeploymentnotification.internal.message.handler:
        enabled: false
----

==== Configuration File Structure

The `mule-agent.yml` file is structured in three levels:

* First level: Component types: transports, services, internalHandlers, and externalHanders.
** Second level: Component name, for example, `mule.agent.jmx.publisher.service`.
*** Third level: Component configuration. A component can have complex object configurations, including more than one recursive level.

To learn more on how to configure the Mule agent, refer to the documentation of each component.

==== Configuring During Runtime

Some agent components allow you to configure them during runtime. For further information, see link:/mule-agent/v/1.3.0/administration-service[Administration Service].

== Enabling REST Agent Transport and Websocket Transport

When you register the API Gateway in the Runtime Manager, the generated `mule-agent.yml` disables the REST agent Transport.

Conversely, if you run `./amc_setup -I`, you enable the REST agent Transport and disable the WebSocket Transport, that is the one used to connect to AMC.

To run both transports, modify the `mule-agent.yml` file as follows:

[source,yaml, linenums]
----
transports:
  websocket.transport:
    consoleUri: wss://mule-manager.anypoint.mulesoft.com:443/mule
    security:
      keyStorePassword: <password>
      keyStoreAlias: agent
      keyStoreAliasPassword: <password>
      handshake:
        enabled: true
        body:
          agentVersion: 1.1.0
          muleVersion: 3.7.0
          gatewayVersion: 2.0.2
  rest.agent.transport:
    port: 8888

services:
  mule.agent.jmx.publisher.service:
    enabled: true
    frequency: 15
    frequencyTimeUnit: MINUTES
----

== Ports and IPs to Whitelist


If you need to whitelist the ports or IPs for the communication between the Mule Agent and the Runtime Manager console please add the ones in the table below:

*Ports*

[cols="30a,70a",options="header"]
|===
|Name |Port
|*anypoint.mulesoft.com* | 443
|*mule-manager.anypoint.mulesoft.com* | 443
|*analytics-ingest.anypoint.mulesoft.com* |  443
|===

*IPs*

[cols="30a,70a",options="header"]
|===
|Name |Address
|*mule-manager.anypoint.mulesoft.com* |52.201.174.72
|*mule-manager.anypoint.mulesoft.com* |52.201.67.218
|===



== See Also

link:/api-manager/configuring-an-api-gateway[Configuring an API Gateway]
